--- a/css/style.css
+++ b/css/style.css
@@ -176,9 +176,10 @@ header {
 /* ---------- hero seciton */
 
 #hero-section-wrapper {
-    height: 750px;
+    height: 650px;
     background-image: url(../assets/img/banner.png);
     background-size: cover;
+    background-position: center;
 }
 
 .hero-section {
@@ -189,7 +190,7 @@ header {
 .hero-section::before {
     background-color: var(--hero-overlay);
     bottom: 0;
-    height: 750px;
+    height: 650px;
     content: "";
     left: 0;
     position: absolute;
@@ -203,7 +204,7 @@ header {
 }
 
 .tradding-amount-count-section {
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 
